Various adjustments in visitor